# TNL-SPH

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  ParticlesConfig.h  README.md  config.mk  ideas.txt  particleCudaDemoTest.cu  particleDemoTest.cu  printNeighborList.h  readParticleDemoTest.cu  visualize.py
Documentation/: Doxyfile  DoxygenLayout.xml
Particles/: GenerateCellIndex.h  GenerateCellIndexFloating.h  Particles.h  Particles.hpp  ParticlesLinkedList.h  ParticlesLinkedList.hpp  ParticlesLinkedListFloating.h  ParticlesLinkedListFloating.hpp  ParticlesTraits.h  Particles_impl.h  neighborSearchLoop.h  neighbourSearch.h  neighbourSearch_impl.h  somethingNotNice.h
Readers/: VTKReader.h  VTKTraits.h  particleReader.h  readSPHSimulation.h
SPH/: Boundary.h  DistributedSPH.h  DistributedSPHSynchronizer.h  DistributedSPH_impl.h  Fluid.h  Kernels.h  OpenBoundaryBuffers.h  PhysicalObject.h  SPH.h  SPHConfig.h  SPHFluidInteractions.h  SPHFluidTraits.h  SPHFluidVariables.h  SPHInteractions.h  SPHInteractionsIntegrator.h  SPHInteractions_impl.h  SPHKernels.h  SPHOpen.h  SPHOpen_impl.h  SPHTraits.h  SPH_impl.h  SPH_implLambda.h  SPHequationOfState.h  TimeStep.h  customParallelFor.h
SPHdemo/: SPHDemoTest  SPHDemoTest.cu  SPHDemoTest.cuo  run.sh
UnitTests/: config.mk  main.h  neighborSearchTest.cpp  neighborSearchTest.cu  neighborSearchTest.h  neighborSearchTest_ZOrderCurve.h
Writers/: VTKWriter.h  VTKWriter.hpp
examples/: CMakeLists.txt
examples/SHTC/lidDrivenCavity2D_SHTC/: CMakeLists.txt  case.h  init.py  run.py
examples/SHTC/lidDrivenCavity2D_SHTC/template/: config.h  config_template.ini
examples/WCSPH-BI/damBreak2D_WCSPH-BI_multiresolution/: CMakeLists.txt  case.h  config.ini  init.py  init_multi_resolution.py  init_new_light.py  init_rectangular_zones.py  init_single_resolution.py  postpro.py  run.py
examples/WCSPH-BI/damBreak2D_WCSPH-BI_multiresolution/template/: config-measuretool_template.ini  config.h  config_template.h  config_template.ini
examples/WCSPH-BI/openChannel3D_WCSPH-BI/: CMakeLists.txt  case.h  init.py  init_pipe.py  run.py
examples/WCSPH-BI/openChannel3D_WCSPH-BI/template/: config.h  config_template.ini
examples/WCSPH-DBC/: CMakeLists.txt
examples/WCSPH-DBC/damBreak2D_WCSPH-DBC/: CMakeLists.txt  CaseSetup.h  case.h  generateCase.py  init.py  postpro.py  postprocessing.sh  run.py
examples/WCSPH-DBC/damBreak2D_WCSPH-DBC/template/: MeasuretoolConfig.h  ParticlesConfig_template.h  SPHCaseConfig_template.h  config.h  config_template.h  config_template.ini
examples/WCSPH-DBC/damBreak2D_WCSPH-DBC_distributed/: CMakeLists.txt  case.h  init.py  run.py
examples/WCSPH-DBC/damBreak2D_WCSPH-DBC_distributed/template/: config.h  config_template.ini
examples/WCSPH-DBC/damBreak2D_WCSPH-DBC_multiresolution/: CMakeLists.txt  README.md  case.h  init.py  init_generate_standard.py  run.py
examples/WCSPH-DBC/damBreak2D_WCSPH-DBC_multiresolution/template/: config.h  config_template.h  config_template.ini
examples/WCSPH-DBC/damBreak3D_WCSPH-DBC/: CMakeLists.txt  CaseSetup.h  case.h  generateCaseWithDSPHGenCase.py  init.py  postpro.py  run.py
examples/WCSPH-DBC/damBreak3D_WCSPH-DBC/template/: ParticlesConfig_template.h  SPHCaseConfig_template.h  config-measuretool_template.ini  config.h  config_template.h  config_template.ini
examples/WCSPH-DBC/damBreak3D_WCSPH-DBC/template/generateGeometryWithDualSPHysicsGenCase/: generateGeometryWithDualSPHysicsGenCase.sh
examples/WCSPH-DBC/damBreak3D_WCSPH-DBC_distributed/: CMakeLists.txt  case.h  init.py  postpro.py  run.py
examples/WCSPH-DBC/damBreak3D_WCSPH-DBC_distributed/template/: config.h  config_template.ini
examples/WCSPH-DBC/damBreak3D_WCSPH-DBC_distributed/template/generateGeometryWithDualSPHysicsGenCase/: damBreak3D_WCSPH-DBC_Def_template.xml  damBreak3D_WCSPH-DBC_Def_with-top-wall_template.xml
examples/WCSPH-DBC/movingSquare2D_WCSPH-DBC/: CMakeLists.txt  case.h  init.py  postpro.py  run.py
examples/WCSPH-DBC/movingSquare2D_WCSPH-DBC/template/: config.h  config_template.h  config_template.ini  userCodedFunctions.h
examples/WCSPH-DBC/openChannel3D_WCSPH-DBC/: CMakeLists.txt  case.h  init.py  init_pipe.py  init_wide.py  run.py
examples/WCSPH-DBC/openChannel3D_WCSPH-DBC/template/: config-open-boundary_template.ini  config.h  config_template.ini  initial_condition.pvsm
examples/WCSPH-DBC/openChannelWithObstacle2D_WCSPH-DBC/: CaseSetup.h
examples/WCSPH-DBC/openChannelWithObstacle2D_WCSPH-DBC/template/: OpenBoundaryConfig_template.h  ParticlesConfig_template.h  SPHCaseConfig_template.h
examples/WCSPH-DBC/poiseuilleFlowWithOpenBoundary2D_WCSPH-DBC/: CMakeLists.txt  CaseSetup.h  case.h  generateCase.py  init.py  postpro.py  run.py
examples/WCSPH-DBC/poiseuilleFlowWithOpenBoundary2D_WCSPH-DBC/template/: SPHCaseConfig_template.h  SimulationControlConfig.h  config-open-boundary_template.ini  config.h  config_template.ini
examples/WCSPH-DBC/poiseuilleFlowWithPeriodicBoundary2D_WCSPH-DBC/: CMakeLists.txt  CaseSetup.h  case.h  generateCase.py  init.py  poiseuilleFlowWithPeriodicBoundary2D_WCSPH-DBC.cu  run.py
examples/WCSPH-DBC/poiseuilleFlowWithPeriodicBoundary2D_WCSPH-DBC/template/: PeriodicBoundaryConfig_template.h  SPHCaseConfig_template.h  config.h  config_template.h  config_template.ini
include/: CMakeLists.txt
playground/: geberatePolydata.py  particleSample_binary.vtk  particleSample_simpleAscii.vtk
src/UnitTests/DistributedParticles/: CMakeLists.txt  DistributedParticleSystemTest.cu  DistributedParticleSystemTest.h
src/UnitTests/multiresolution/testConfigurations/dummyMultiresolutionSimulation2D/: CMakeLists.txt  configurations.py  dummyConfig2D.h  dummyConfig2D_template.ini  dummyMultiresolutionSimulation2D.cu  dummyMultiresolutionSimulation2D.h  init_2dmr_configuration.py  run.py
src/UnitTests/multiresolution/testConfigurations/dummyMultiresolutionSimulation3D/: CMakeLists.txt  dummyConfig3D.h  dummyConfig3D_template.ini  dummyMultiresolutionSimulation3D.cu  dummyMultiresolutionSimulation3D.h  init_3dmr_configuration.py  run.py
(+718 files in other folders)
