add_subdirectory(damBreak2D_WCSPH-DBC)
add_subdirectory(damBreak2D_WCSPH-DBC_distributed)
add_subdirectory(damBreak2D_WCSPH-DBC_multiresolution)
add_subdirectory(damBreak3D_WCSPH-DBC)
add_subdirectory(damBreak3D_WCSPH-DBC_distributed)
add_subdirectory(openChannel3D_WCSPH-DBC)
add_subdirectory(poiseuilleFlowWithOpenBoundary2D_WCSPH-DBC)
add_subdirectory(poiseuilleFlowWithPeriodicBoundary2D_WCSPH-DBC)
